--- a/style.css
+++ b/style.css
@@ -41,3 +41,43 @@ form button:hover{
     color: white;
 }
 
+/* Center todo list container */
+.todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Style todo list <ul> */
+.todo-list {
+    min-width: 30%;
+    list-style: none;
+}
+
+.todo {
+    margin: 0.5rem;
+    background: white;
+    color: black;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Push check and trash buttons */
+.todo li{
+    flex: 1;
+}
+
+.trash-btn, .complete-btn {
+   background: #ff6f47;
+   color: white;
+   border: none;
+   padding: 1rem;
+   cursor: pointer;
+   font-size: 1rem;
+}
+
+.complete-btn{
+    background: rgb(73, 204, 73)
+}
